[gd_scene load_steps=21 format=2]

[ext_resource path="res://Main/Scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Main/Assets/title.png" type="Texture" id=2]
[ext_resource path="res://Main/Assets/Fonts/120.tres" type="DynamicFont" id=3]
[ext_resource path="res://Main/Assets/Fonts/60.tres" type="DynamicFont" id=4]
[ext_resource path="res://Main/Scripts/Menus/TitleScreenButton.gd" type="Script" id=5]
[ext_resource path="res://Main/Scripts/Menus/SelectSceneButton.gd" type="Script" id=6]
[ext_resource path="res://Main/Assets/Fonts/28.tres" type="DynamicFont" id=7]
[ext_resource path="res://Gameplay/Assets/cell-white/cell-white-idle-0.png" type="Texture" id=8]
[ext_resource path="res://Main/Scripts/Animations/GodotLogo.gd" type="Script" id=9]
[ext_resource path="res://Main/Scenes/Animations/FadeAnimation.tscn" type="PackedScene" id=10]
[ext_resource path="res://Gameplay/Assets/cell-red/cell-red-idle-0.png" type="Texture" id=11]
[ext_resource path="res://Main/Scripts/Menus/CellAnimManager.gd" type="Script" id=12]
[ext_resource path="res://Main/Scenes/Partials/Settings.tscn" type="PackedScene" id=13]
[ext_resource path="res://Main/Scenes/Partials/SelectStage.tscn" type="PackedScene" id=14]
[ext_resource path="res://Main/Scenes/Animations/Fade.tscn" type="PackedScene" id=15]
[ext_resource path="res://Main/Assets/GoCell Main Menu.ogg" type="AudioStream" id=16]

[sub_resource type="Animation" id=1]

resource_name = "rotate"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 359.99 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 4, 4 ), Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -100, 0 ), Vector2( 0, 100 ), Vector2( 100, 0 ), Vector2( 0, -100 ), Vector2( -100, 0 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "rotate"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 359.99 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 4, 4 ), Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 100, 0 ), Vector2( 0, -100 ), Vector2( -100, 0 ), Vector2( 0, 100 ), Vector2( 100, 0 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "fade_in"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("a/OrbitAnim:playback_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("b/OrbitAnim:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=4]

resource_name = "fade_out"
length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("a/OrbitAnim:playback_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("b/OrbitAnim:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="TitleScreen" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Hint", "Transform" ]

[node name="MainPage" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.4, 0, 0, 1 )
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility" ]

[node name="Container" type="MarginContainer" parent="MainPage" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = 428.0
margin_bottom = 236.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 20
_sections_unfolded = [ "Rect", "Visibility", "custom_constants" ]

[node name="HBox" type="HBoxContainer" parent="MainPage/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 20.0
margin_right = 1038.0
margin_bottom = 575.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="LeftSide" type="VBoxContainer" parent="MainPage/Container/HBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 268.0
margin_bottom = 555.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="CenterContainer" type="CenterContainer" parent="MainPage/Container/HBox/LeftSide" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 268.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
use_top_left = false
_sections_unfolded = [ "Margin", "Size Flags", "Theme" ]

[node name="title" type="Sprite" parent="MainPage/Container/HBox/LeftSide/CenterContainer" index="0"]

position = Vector2( 263.715, 58.2915 )
scale = Vector2( 0.661743, 0.661743 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="MainPage/Container/HBox/LeftSide/CenterContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2.0
margin_top = -2.0
margin_right = 269.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Go-Cell"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Hint", "Pause", "Rect", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="MenuButtons" type="VBoxContainer" parent="MainPage/Container/HBox/LeftSide" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 268.0
margin_bottom = 439.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_constants" ]

[node name="Gameplay" type="VBoxContainer" parent="MainPage/Container/HBox/LeftSide/MenuButtons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 3.0
margin_right = 268.0
margin_bottom = 143.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="Start" type="LinkButton" parent="MainPage/Container/HBox/LeftSide/MenuButtons/Gameplay" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 221.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Start Game"
underline = 1
script = ExtResource( 5 )
_sections_unfolded = [ "Material", "Pause", "Size Flags", "custom_fonts" ]
gameplay_type = "Gameplay"

[node name="TimeTrial" type="LinkButton" parent="MainPage/Container/HBox/LeftSide/MenuButtons/Gameplay" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 193.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Time Trial"
underline = 1
script = ExtResource( 5 )
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "custom_fonts" ]
gameplay_type = "TimeTrial"

[node name="Scenes" type="VBoxContainer" parent="MainPage/Container/HBox/LeftSide/MenuButtons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 163.0
margin_right = 268.0
margin_bottom = 303.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "Size Flags", "Theme", "custom_constants" ]

[node name="Leaderboards" type="LinkButton" parent="MainPage/Container/HBox/LeftSide/MenuButtons/Scenes" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 268.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Leaderboards"
underline = 1
script = ExtResource( 6 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "custom_fonts", "custom_styles" ]
scene_to_load = "res://Leaderboards/Scenes/Leaderboards.tscn"

[node name="Credits" type="LinkButton" parent="MainPage/Container/HBox/LeftSide/MenuButtons/Scenes" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 141.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Credits"
underline = 1
script = ExtResource( 6 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "custom_fonts", "custom_styles" ]
scene_to_load = "res://Credits/Scenes/Credits.tscn"

[node name="Version" type="Label" parent="MainPage/Container/HBox/LeftSide" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 479.0
margin_right = 268.0
margin_bottom = 554.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "by Gold Cell - Game Development Course - Fasilkom UI - v1.0.0"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="RightSide" type="VBoxContainer" parent="MainPage/Container/HBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 308.0
margin_right = 1008.0
margin_bottom = 555.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 11
size_flags_vertical = 11
alignment = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="GameOptions" type="HBoxContainer" parent="MainPage/Container/HBox/RightSide" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 700.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Settings" type="LinkButton" parent="MainPage/Container/HBox/RightSide/GameOptions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 420.0
margin_right = 584.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Settings"
underline = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Exit" type="LinkButton" parent="MainPage/Container/HBox/RightSide/GameOptions" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 624.0
margin_right = 700.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Exit"
underline = 1
_sections_unfolded = [ "Anchor", "Margin", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Dashboard" type="CenterContainer" parent="MainPage/Container/HBox/RightSide" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 700.0
margin_bottom = 555.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Cell" type="Container" parent="MainPage/Container/HBox/RightSide/Dashboard" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 350.0
margin_top = 251.0
margin_right = 350.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Mouse", "Size Flags", "Theme", "Visibility" ]

[node name="a" type="TextureRect" parent="MainPage/Container/HBox/RightSide/Dashboard/Cell" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_right = -100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
expand = true
stretch_mode = 4
script = ExtResource( 9 )
_sections_unfolded = [ "Anchor", "Margin", "Material", "Rect", "Theme" ]

[node name="OrbitAnim" parent="MainPage/Container/HBox/RightSide/Dashboard/Cell/a" index="0" instance=ExtResource( 10 )]

anims/rotate = SubResource( 1 )
_sections_unfolded = [ "Pause", "Playback Options" ]

[node name="b" type="TextureRect" parent="MainPage/Container/HBox/RightSide/Dashboard/Cell" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 11 )
expand = true
stretch_mode = 4
script = ExtResource( 9 )
_sections_unfolded = [ "Anchor", "Margin", "Material", "Rect", "Theme" ]

[node name="OrbitAnim" parent="MainPage/Container/HBox/RightSide/Dashboard/Cell/b" index="0" instance=ExtResource( 10 )]

anims/rotate = SubResource( 2 )
_sections_unfolded = [ "Playback Options" ]

[node name="FadeAnim" type="AnimationPlayer" parent="MainPage/Container/HBox/RightSide/Dashboard/Cell" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )
blend_times = [  ]
script = ExtResource( 12 )
_sections_unfolded = [ "Playback Options" ]

[node name="Settings" parent="MainPage/Container/HBox/RightSide/Dashboard" index="1" instance=ExtResource( 13 )]

margin_left = 170.0
margin_top = 161.0
margin_right = 530.0
margin_bottom = 341.0

[node name="SelectStage" parent="MainPage/Container/HBox/RightSide/Dashboard" index="2" instance=ExtResource( 14 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 106.0
margin_top = 149.0
margin_right = 594.0
margin_bottom = 353.0

[node name="Fade" parent="." index="1" instance=ExtResource( 15 )]

visible = false
margin_right = 640.0
margin_bottom = 360.0
_sections_unfolded = [ "Pause", "Rect", "Visibility" ]

[node name="MainMusic" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 16 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Music"

[connection signal="pressed" from="MainPage/Container/HBox/RightSide/GameOptions/Settings" to="." method="_on_Settings_pressed"]

[connection signal="pressed" from="MainPage/Container/HBox/RightSide/GameOptions/Exit" to="." method="_on_Exit_pressed"]

[connection signal="need_restart" from="MainPage/Container/HBox/RightSide/Dashboard/Settings" to="." method="_on_Settings_need_restart"]

[connection signal="fade_out_finished" from="MainPage/Container/HBox/RightSide/Dashboard/SelectStage" to="." method="_on_SelectStage_fade_out_finished"]

[connection signal="user_choosed" from="MainPage/Container/HBox/RightSide/Dashboard/SelectStage" to="." method="_on_ChangeScene_Button_pressed"]

[connection signal="fade_in_finished" from="Fade" to="." method="_on_Fade_fade_in_finished"]


